2024-10-14T00:38:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11319061714 # 586
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-14
* notice: last 14d: unq all: 10 26
* notice: prev accum: outdated-unq outdated-all / unq all: 839 4621 / 851 4649
* notice: next accum: outdated-unq outdated-all / unq all: 841 4623 / 851 4649
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-29] / []

2024-10-13T00:39:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11309996644 # 584
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-13
* notice: last 14d: unq all: 12 28
* notice: prev accum: outdated-unq outdated-all / unq all: 838 4620 / 850 4648
* notice: next accum: outdated-unq outdated-all / unq all: 839 4621 / 851 4649
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-09-28] / [2024-10-12]

2024-10-12T00:35:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11301124886 # 582
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-12
* notice: last 14d: unq all: 12 28
* notice: prev accum: outdated-unq outdated-all / unq all: 835 4611 / 850 4648
* notice: next accum: outdated-unq outdated-all / unq all: 838 4620 / 850 4648
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-27] / []

2024-10-11T12:13:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11292110663 # 581