@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-10-14T00:38:39Z",
-  "count_outdated" : 4623,
-  "uniques_outdated" : 841,
+  "timestamp" : "2024-10-14T12:14:15Z",
+  "count_outdated" : 4631,
+  "uniques_outdated" : 842,
   "count" : 4649,
   "uniques" : 851,
   "views" : [
-    {
-      "timestamp": "2024-09-30T00:00:00Z",
-      "count": 8,
-      "count_minmax": [ 8, 8 ],
-      "count_decinc": [ 0, 8 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-10-01T00:00:00Z",
       "count": 7,
