@@ -1,12 +1,7 @@
 {
-  "count": 26,
-  "uniques": 10,
+  "count": 18,
+  "uniques": 9,
   "views": [
-    {
-      "timestamp": "2024-09-30T00:00:00Z",
-      "count": 8,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-10-01T00:00:00Z",
       "count": 7,
