@@ -1,3 +1,12 @@
+2024-10-14T12:14:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11327302129 # 587
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-14
+* notice: last 14d: unq all: 9 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 841 4623 / 851 4649
+* notice: next accum: outdated-unq outdated-all / unq all: 842 4631 / 851 4649
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-09-30] / []
+
 2024-10-14T00:38:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11319061714 # 586
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-14
